[package]
name = "spider_tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spider_client = { git = "https://github.com/Ocelmot/spider" }

tokio = { version = "1", features = ["full"] }
crossterm = "0.20"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }

chrono = "0.4.19"

async-trait = "0.1.52"


tracing = "0.1"
tracing-subscriber = "0.3.14"
tracing-appender = "0.2.2"